--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.8.6",
-    "react-datepicker": "^2.7.0",
+    "react-dates": "^20.2.5",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-with-direction": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
